--- a/GreatProj/appsettings.json
+++ b/GreatProj/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DBConnection": "Server=PUMI\\SQLEXPRESS;Database=GreatProj;Integrated Security=true"
   },
+  "AppSettings": {
+    "Token": "My top secret key  123456789 for Authentification 123456789 is a top secret Key"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
